Notification tab: Reverted to old school GDS to control and solve the tab wrapping issue (#828)

--- a/src/UKMCAB.Web.UI/assets/scss/views/notifications.scss
+++ b/src/UKMCAB.Web.UI/assets/scss/views/notifications.scss
@@ -1,5 +1,4 @@
 .notifications-tabs {
-
     @include govuk-media-query($until: tablet) {
         td > label {
             display: none;
@@ -88,10 +87,9 @@
             background-color: govuk-colour("light-grey", $legacy: "grey-4");
             text-align: center;
             width: auto;
-            padding: govuk-spacing(2) govuk-spacing(7);
+            padding: govuk-spacing(2) govuk-spacing(3);
             margin: 0 govuk-spacing(1) 0 0;
-
-            @include govuk-media-query($until: tablet) {
+            @media (max-width: 900px) {
                 padding: govuk-spacing(2) 0;
                 margin: 5px 2px;
                 width: 48%;
@@ -149,8 +147,7 @@
             padding-right: govuk-spacing(4) - $border-width;
             padding-bottom: 16px;
             padding-left: govuk-spacing(4) - $border-width;
-
-            @include govuk-media-query($until: tablet) {
+            @media (max-width: 900px) {
                 border: $border-width solid $govuk-border-colour;
                 padding: govuk-spacing(2) 0;
                 margin: 5px 2px;
